--- a/styles.css
+++ b/styles.css
@@ -141,22 +141,147 @@ hr {
   white-space: normal;
 }
 
-.right {
-  position: absolute;
-  margin: 0 auto;
+div.wrapper {
+  width: auto;
+  margin: 0
 }
 
-.wrap_text {
-  position: sticky;
-  left: 50%;
+.wrapper {
+  width: 860px;
+  margin: 0 auto
+}
+
+header {
   width: 300px;
-  height: 300px;
+  float: right;
+  left: 60%;
+  position: fixed;
+  -webkit-font-smoothing: subpixel-antialiased
 }
 
-.text {
-  position: relative;
+header ul {
+  list-style: none;
+  height: 40px;
+  padding: 0;
+  background: #f4f4f4;
+  border-radius: 5px;
+  border: 1px solid #e0e0e0;
+  width: 270px
 }
 
-.box {
-  overflow: hidden;
+header li {
+  width: 89px;
+  float: right;
+  border-right: 1px solid #e0e0e0;
+  height: 40px
+}
+
+header li:first-child a {
+  border-radius: 5px 0 0 5px
+}
+
+header li:last-child a {
+  border-radius: 0 5px 5px 0
+}
+
+header ul a {
+  line-height: 1;
+  font-size: 11px;
+  color: #676767;
+  display: block;
+  text-align: center;
+  padding-top: 6px;
+  height: 34px
+}
+
+header ul a:hover,
+header ul a:focus {
+  color: #675C5C;
+  font-weight: bold
+}
+
+header ul a:active {
+  background-color: #f0f0f0
+}
+
+@media print,
+screen and (max-width: 960px) {
+    div.wrapper {
+        width: auto;
+        margin: 0
+    }
+
+    header,
+    section,
+    footer {
+        float: none;
+        position: static;
+        width: auto
+    }
+
+    header {
+        padding-right: 320px
+    }
+
+    section {
+        border: 1px solid #e5e5e5;
+        border-width: 1px 0;
+        padding: 20px 0;
+        margin: 0 0 20px
+    }
+
+    header a small {
+        display: inline
+    }
+
+    header ul {
+        position: absolute;
+        right: 50px;
+        top: 52px
+    }
+}
+
+@media print,
+screen and (max-width: 720px) {
+    body {
+        word-wrap: break-word
+    }
+
+    header {
+        padding: 0
+    }
+
+    header ul,
+    header p.view {
+        position: static
+    }
+
+    pre,
+    code {
+        word-wrap: normal
+    }
+}
+
+@media print,
+screen and (max-width: 480px) {
+    body {
+        padding: 15px
+    }
+
+    header ul {
+        width: 99%
+    }
+
+    header li,
+    header ul li+li+li {
+        width: 33%
+    }
+}
+
+@media print {
+    body {
+        padding: 0.4in;
+        font-size: 12pt;
+        color: #444
+    }
 }
