--- a/styles.css
+++ b/styles.css
@@ -11,6 +11,7 @@ item.active,
 
 body {
   font-size: 17px;
+  word-wrap: break-word;
 }
 
 td {
@@ -74,9 +75,29 @@ h6 {
   white-space: normal;
 }
 
-a:hover {
+pre {
+  padding: 8px 15px;
+  background: #f8f8f8;
+  border-radius: 5px;
+  border: 1px solid #e5e5e5;
+  overflow-x: auto;
+}
+
+a:hover,
+a:focus {
   color: navy;
   font-weight: bold;
+}
+
+a small {
+  font-size: 11px;
+  color: #777;
+  margin-top: -0.3em;
+  display: block
+}
+
+a:hover small {
+  color: navy;
 }
 
 div.right {
@@ -141,6 +162,10 @@ hr {
   white-space: normal;
 }
 
+ul {
+  margin: 0 0 20px
+}
+
 div.wrapper {
   width: auto;
   margin: 0
@@ -151,12 +176,22 @@ div.wrapper {
   margin: 0 auto
 }
 
-header {
-  width: 300px;
+section {
+  width: 500px;
   float: right;
-  left: 60%;
+  padding-bottom: 50px
+}
+
+header {
+  width: 270px;
+  float: right;
+  left: 65%;
   position: fixed;
   -webkit-font-smoothing: subpixel-antialiased
+}
+
+small {
+  font-size: 11px
 }
 
 header ul {
@@ -171,7 +206,7 @@ header ul {
 
 header li {
   width: 89px;
-  float: right;
+  float: left;
   border-right: 1px solid #e0e0e0;
   height: 40px
 }
@@ -204,84 +239,101 @@ header ul a:active {
   background-color: #f0f0f0
 }
 
+strong {
+  color: #222;
+  font-weight: 700
+}
+
+header ul li+li+li {
+  border-right: none;
+  width: 89px
+}
+
+header ul a strong {
+  font-size: 14px;
+  display: block;
+  color: #222
+}
+
+
 @media print,
 screen and (max-width: 960px) {
-    div.wrapper {
-        width: auto;
-        margin: 0
-    }
+  div.wrapper {
+    width: auto;
+    margin: 0
+  }
 
-    header,
-    section,
-    footer {
-        float: none;
-        position: static;
-        width: auto
-    }
+  header,
+  section,
+  footer {
+    float: none;
+    position: static;
+    width: auto
+  }
 
-    header {
-        padding-right: 320px
-    }
+  header {
+    padding-right: 320px
+  }
 
-    section {
-        border: 1px solid #e5e5e5;
-        border-width: 1px 0;
-        padding: 20px 0;
-        margin: 0 0 20px
-    }
+  section {
+    border: 1px solid #e5e5e5;
+    border-width: 1px 0;
+    padding: 20px 0;
+    margin: 0 0 20px
+  }
 
-    header a small {
-        display: inline
-    }
+  header a small {
+    display: inline
+  }
 
-    header ul {
-        position: absolute;
-        right: 50px;
-        top: 52px
-    }
+  header ul {
+    position: absolute;
+    right: 50px;
+    top: 52px
+  }
 }
 
 @media print,
 screen and (max-width: 720px) {
-    body {
-        word-wrap: break-word
-    }
+  body {
+    word-wrap: break-word
+  }
 
-    header {
-        padding: 0
-    }
+  header {
+    padding: 0
+  }
 
-    header ul,
-    header p.view {
-        position: static
-    }
+  header ul,
+  header p.view {
+    position: static
+  }
 
-    pre,
-    code {
-        word-wrap: normal
-    }
+  pre,
+  code {
+    word-wrap: normal
+  }
 }
 
 @media print,
 screen and (max-width: 480px) {
-    body {
-        padding: 15px
-    }
+  body {
+    padding: 15px
+  }
 
-    header ul {
-        width: 99%
-    }
+  header ul {
+    width: 99%
+  }
 
-    header li,
-    header ul li+li+li {
-        width: 33%
-    }
+  header li,
+  header ul li+li+li {
+    width: 33%
+  }
 }
 
 @media print {
-    body {
-        padding: 0.4in;
-        font-size: 12pt;
-        color: #444
-    }
+  body {
+    padding: 0.4in;
+    font-size: 12pt;
+    color: #444
+  }
 }
