--- a/styles.css
+++ b/styles.css
@@ -16,22 +16,6 @@ item.active,
   max-width: 600px;
 }
 
-.navbar-name {
-  font-size: 3.25rem;
-  color: black;
-  text-decoration: underline 0.15em rgba(0, 0, 128, 0);
-  text-underline-offset: 0.1em;
-  transition: text-decoration-color 300ms, text-underline-offset 300ms;
-}
-
-.navbar-name:hover,
-.navbar-name:focus {
-  color: navy;
-  font-weight: bold;
-  text-decoration-color: rgba(0, 0, 128, 1);
-  text-underline-offset: 0.1em;
-}
-
 #container-wrap {
   width: 1000px;
 }
@@ -144,21 +128,51 @@ pre {
   overflow-x: auto;
 }
 
-p a,
-li a {
-  text-decoration: underline 0.15em rgba(0, 0, 128, 0);
-  text-underline-offset: 0.1em;
-  transition: text-decoration-color 300ms, text-underline-offset 300ms;
+.navbar-name {
+  font-size: 3.25rem;
+  color: black;
+  text-decoration: none;
+  position: relative;
 }
 
+p a,
+li a {
+  position: relative;
+  text-decoration: none;
+}
+
+.navbar-name:hover,
+.navbar-name:focus,
 p a:hover,
 p a:focus,
 li a:hover,
 li a:focus {
+  text-decoration: none;
   color: navy;
   font-weight: bold;
-  text-decoration-color: rgba(0, 0, 128, 1);
-  text-underline-offset: 0.1em;
+}
+
+.navbar-name::after,
+p a::after,
+li a::after {
+  content: "";
+  position: absolute;
+  left: 0;
+  bottom: 0;
+  width: 100%;
+  height: 2px;
+  background: currentColor;
+
+  transform: scaleX(0);
+  transform-origin: right;
+  transition: transform 250ms ease-in;
+}
+
+.navbar-name:hover::after,
+li a:hover::after,
+p a:hover::after {
+  transform: scaleX(1);
+  transform-origin: left;
 }
 
 p a small,
@@ -167,11 +181,6 @@ li a small {
   color: #777;
   margin-top: -0.3em;
   display: block
-}
-
-p a:hover small,
-li a:hover small {
-  color: navy;
 }
 
 header {
