--- a/styles.css
+++ b/styles.css
@@ -129,32 +129,61 @@ pre {
 }
 
 .navbar-name {
+  padding: 2rem;
   font-size: 3.25rem;
   color: black;
   text-decoration: none;
   position: relative;
+  z-index: 1;
+}
+
+.navbar-name:hover {
+  text-decoration: none;
+  color: white;
+}
+
+.navbar-name::after {
+  content: "";
+  position: absolute;
+  top: -0.25rem;
+  bottom: -0.25rem;
+  width: 100%;
+  height: 90%;
+  left: -0.5rem;
+  background: gray;
+  z-index: -1;
+
+  transform: scaleX(0.11);
+  transform-origin: left;
+
+  transition: transform 250ms ease-in;
+}
+
+.navbar-name:hover::after {
+  transform: scaleX(1);
 }
 
 p a,
-li a {
+li a,
+a {
   position: relative;
   text-decoration: none;
 }
 
-.navbar-name:hover,
-.navbar-name:focus,
 p a:hover,
 p a:focus,
 li a:hover,
-li a:focus {
+li a:focus,
+a:hover,
+a:focus {
   text-decoration: none;
   color: navy;
   font-weight: bold;
 }
 
-.navbar-name::after,
 p a::after,
-li a::after {
+li a::after,
+a::after {
   content: "";
   position: absolute;
   left: 0;
@@ -168,9 +197,9 @@ li a::after {
   transition: transform 250ms ease-in;
 }
 
-.navbar-name:hover::after,
 li a:hover::after,
-p a:hover::after {
+p a:hover::after,
+a:hover::after {
   transform: scaleX(1);
   transform-origin: left;
 }
@@ -217,7 +246,7 @@ hr {
   background-color: gray;
 }
 
-.a {
+.container2 {
   position: relative;
   word-wrap: break-word;
   white-space: normal;
