--- a/styles.css
+++ b/styles.css
@@ -498,7 +498,7 @@ input[type=checkbox] {
 }
 
 input[type=checkbox]:checked~label>img {
-  transform: scale(1.5) translate(0, 50%);
+  transform: scale(1.1) translate(0, 0);
   cursor: zoom-out;
 }
 
